--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
       </div>
       <div class="sidebar-brand text-center">
         <a href="{{ site.baseurl }}/">{{ site.title }}</a>
+        <hr class="sidebar">
       </div>
       <li class="links">
         <a href="/portfolio">Portfolio</a>
