--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,6 @@
       </div>
       <div class="sidebar-brand text-center">
         <a href="{{ site.baseurl }}/">{{ site.title }}</a>
-        <hr class="sidebar">
       </div>
       <li class="links">
         <a href="/portfolio">Portfolio</a>
@@ -40,8 +39,16 @@
         </p>
       </div>
       <div class="text-center">
-        <p class="whitefont">&copy; Luiseaguilar 2015</p>
+        <p class="blackfont">Special thanks to:</p>
       </div>
+      <li class="thanks">
+        <a href="http://jekyllrb.com/">Jekyll</a>
+        <a href="http://getbootstrap.com/">Bootstrap</a>
+        <a href="http://github.com/">github</a>
+        <a href="http://mynameismatthieu.com/WOW/">wow.js</a>
+        <a href="http://http://www.blacktie.co/">BlackTie</a>
+        <a href="http://responsivetest.net/">RespnsiveTest.net</a>
+      </li>
     </ul>
   </div>
 </header>
