--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -58,31 +58,29 @@ html {
 }
 .sidebar-nav li {
   line-height: 30px;
-  margin-left: 85px;
+  margin-left: 57px;
 }
-.sidebar-nav li a:link {
+.links a {
   display: block;
   text-decoration: none;
   color: #fff;
   font-family: "Roboto Slab", serif;
   font-size: 20px;
 }
-.sidebar-nav li a:visited {
+.links a:hover {
+  color: #2F2F2F;
   text-decoration: none;
-  color: #fff;
-  background: #2F2F2F;
-  font-size: 20px;
-}
-.sidebar-nav li a:hover {
-  background: #2F2F2F;
 }
 .sidebar-nav > .sidebar-brand {
+  background-color: #FB8946;
   font-size: 36px;
-  margin: 0px 0px 30px;
+  padding: 0px 0px 10px;
+  margin: 10px 0px 30px;
   text-decoration: none;
 }
 .sidebar-nav > .sidebar-brand a {
   color: #fff;
+  background-color: #FB8946;
   font-family: "Indie Flower", serif;
   font-weight: bold;
   font-size: 36px;
@@ -91,6 +89,7 @@ html {
 }
 .sidebar-nav > .sidebar-brand a:hover {
   color: #fff;
+  background-color: #FB8946;
   background: none;
   font-size: 36px;
   margin: 0px 0px 30px;
@@ -409,10 +408,30 @@ hr.line {
 }
 hr.sidebar {
   width: 100%;
-  height: 30px;
+  height: 20px;
   margin-left: auto;
   margin-right: auto;
-  background-color: #FB8946;
-  color: #FB8946;
+  background-color: #2f2f2f;
+  color: #2f2f2f;
   border: 0 none;
+}
+.blackfont {
+  padding: 10px 0px;
+  color: #fff;
+  background: #2f2f2f;
+  font-family: "Lato", serif;
+  font-size: 20px;
+}
+.thanks a{
+  display:block;
+  color: #fff;
+  text-decoration: none;
+  font-family: "Roboto Slab", serif;
+  font-size: 13px;
+}
+.thanks a:hover{
+  text-decoration: none;
+  color: #FB8946;
+  font-family: "Roboto Slab", serif;
+  font-size: 16px;
 }
