--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
         <a href="http://getbootstrap.com/">Bootstrap</a>
         <a href="http://github.com/">github</a>
         <a href="http://mynameismatthieu.com/WOW/">wow.js</a>
-        <a href="http://http://www.blacktie.co/">BlackTie</a>
+        <a href="http://blacktie.co/">BlackTie</a>
         <a href="http://responsivetest.net/">RespnsiveTest.net</a>
       </li>
     </ul>
