--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,10 +8,9 @@
       <div class="sidebar-brand text-center">
         <a href="{{ site.baseurl }}/">{{ site.title }}</a>
       </div>
-      <li class="links">
+      <li class="links text-center">
         <a href="/portfolio">Portfolio</a>
         <a href="/resume">Resume</a>
-        <a href="/contact">Lets Talk</a>
         <a href="/blog">Blog</a>
       </li>
       <br>
@@ -41,13 +40,14 @@
       <div class="text-center">
         <p class="blackfont">Special thanks to:</p>
       </div>
-      <li class="thanks">
+      <li class="thanks text-center">
         <a href="http://jekyllrb.com/">Jekyll</a>
         <a href="http://getbootstrap.com/">Bootstrap</a>
         <a href="http://github.com/">github</a>
         <a href="http://mynameismatthieu.com/WOW/">wow.js</a>
         <a href="http://blacktie.co/">BlackTie</a>
         <a href="http://responsivetest.net/">RespnsiveTest.net</a>
+        <a href="https://ruby-lang.org/">Ruby</a>
       </li>
     </ul>
   </div>
