--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -405,19 +405,11 @@ hr.line {
 .shareicons:link, .shareicons:visited {
   color: #FB8946;
 }
-hr.sidebar {
-  width: 100%;
-  height: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #2f2f2f;
-  color: #2f2f2f;
-  border: 0 none;
-}
 .blackfont {
   padding: 2px 0px 5px;
+  margin: 0px 40px;
   color: #fff;
-  background: #FB8946;
+  background: #2f2f2f;
   font-family: "Lato", serif;
   font-size: 20px;
 }
@@ -435,4 +427,21 @@ hr.sidebar {
   color: #FB8946;
   font-family: "Roboto Slab", serif;
   font-size: 16px;
+}
+.emaillink{
+  margin-bottom: 15px;
+  font-family: "Roboto Slab", serif;
+  font-size: 20px;
+}
+.emaillink a:link{
+  color: #fff;
+  background: #FB8946;
+  text-decoration: none;
+  padding: 5px;
+}
+.emaillink a:hover{
+  color: #fff;
+  background: #2f2f2f;
+  text-decoration: none;
+  padding: 5px;
 }
