--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
         <a href="http://github.com/">github</a>
         <a href="http://mynameismatthieu.com/WOW/">wow.js</a>
         <a href="http://blacktie.co/">BlackTie</a>
-        <a href="http://responsivetest.net/">RespnsiveTest.net</a>
+        <a href="http://responsivetest.net/">ResponsiveTest.net</a>
         <a href="https://ruby-lang.org/">Ruby</a>
       </li>
     </ul>
