--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,38 +1,7 @@
 <!DOCTYPE html>
 <html>
 {% include head.html %}
-<body>
-
-
-  <div id="wrapper">
-    {% include header.html %}
-    <div class="container-fluid">
-      <button type="button" class="nav-toggle" id="menu-toggle">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-    <div id="page-content-wrapper">
-            {{ content }}
-    </div>
-  </div>
-
-  <!-- Bootstrap Core JavaScript -->
-  <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }}"></script>
-  
-  <!-- Menu Toggle Script -->
-  <script>
-    $("#menu-toggle").click(function(e) {
-      e.preventDefault();
-      $("#wrapper").toggleClass("toggled");
-    });
-  </script>
-
-  <script src="{{ "/js/wow.min.js" | prepend: site.baseurl }}"></script>
-  <script>
-    new WOW().init();
-  </script>
+<body class="w3-dark-grey">
+{{content}}
 </body>
 </html>
