--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,7 @@
 <link rel="stylesheet" href="{{ "assets/css/w3.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="{{ "assets/css/main.css" | prepend: site.baseurl }}">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto+Slab'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
 <link rel="apple-touch-icon" sizes="57x57" href="{{ "assets/fav/apple-icon-57x57.png" | prepend: site.baseurl }}">
