--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,16 @@
 html,
 body,
-h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
     font-family: "Roboto", sans-serif
+}
+h1{
+  font-family: "Roboto Slab", sans-serif;
+  letter-spacing: 1.5px;
+
 }
 
 a {
