--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,12 +5,11 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Roboto", sans-serif
+    font-family: "Roboto", sans-serif;
 }
 h1{
   font-family: "Roboto Slab", sans-serif;
-  letter-spacing: 1.5px;
-
+  letter-spacing: 1.5px
 }
 
 a {
