--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,17 +8,17 @@
 <!-- Facebook -->
 <meta property="og:site_name" content="Luis E. Aguilar">
 <meta property="og:title" content="Luis E. Aguilar | Web Developer">
-<meta property="og:url" content="http://luiseaguilar.com/">
-<meta property="og:image" content="http://luiseaguilar.com/img/photo.jpg">
+<meta property="og:url" content="https://luiseaguilar.com/">
+<meta property="og:image" content="https://luiseaguilar.com/img/photo.jpg">
 <meta property="og:description" content="Welcome, My name is Luis E. Aguilar and I am a web developer. Take a look at my portfolio.">
 
 <!-- Twitter -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@20tibbygt06">
-<meta name="twitter:site" content="http://luiseaguilar.com/">
+<meta name="twitter:site" content="https://luiseaguilar.com/">
 <meta name="twitter:title" content="Luis E. Aguilar | Web Developer">
 <meta name="twitter:description" content="Welcome, My name is Luis E. Aguilar and I am a web developer. Take a look at my portfolio.">
-<meta name="twitter:image:src" content="http://luiseaguilar.com/img/photo.jpg">
+<meta name="twitter:image:src" content="https://luiseaguilar.com/img/photo.jpg">
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %} | Web Developer</title>
 
