--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,10 @@
-html,
-body,
-h2,
-h3,
-h4,
-h5,
-h6 {
+html, body, h2, h3, h4, h5, h6 {
     font-family: "Roboto", sans-serif;
 }
-h1{
-  font-family: "Roboto Slab", sans-serif;
-  letter-spacing: 1.5px
+
+h1 {
+    font-family: "Roboto Slab", sans-serif;
+    letter-spacing: 1.5px
 }
 
 a {
